--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="white" />
     <title>高速ご挨拶クイズ</title>
+
+    <meta property="og:url" content="https://high-speed-greetings-quiz.vercel.app/"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="高速ご挨拶クイズ"/>
+    <meta property="og:description" content="全人類の基本ををクリアせよ！"/>
+    <meta property="og:site_name" content="高速ご挨拶クイズ"/>
+    <meta property="og:image" content="images/OGP.png" />
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@pakira_rrr">
+    <meta name="twitter:title" content="高速ご挨拶クイズ">
+    <meta name="twitter:description" content="全人類の基本ををクリアせよ！">
+    <meta name="twitter:image" content="images/OGP.png" />
+
   </head>
   <body>
     <div id="root"></div>
