--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,13 @@
     <meta property="og:title" content="高速ご挨拶クイズ"/>
     <meta property="og:description" content="全人類の基本ををクリアせよ！"/>
     <meta property="og:site_name" content="高速ご挨拶クイズ"/>
-    <meta property="og:image" content="images/OGP.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/OGP.png" />
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@pakira_rrr">
     <meta name="twitter:title" content="高速ご挨拶クイズ">
     <meta name="twitter:description" content="全人類の基本ををクリアせよ！">
-    <meta name="twitter:image" content="images/OGP.png" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/OGP.png" />
 
   </head>
   <body>
